--- a/docs/_includes/nav/customize.html
+++ b/docs/_includes/nav/customize.html
@@ -45,6 +45,7 @@
     <li><a href="#code">Code</a></li>
     <li><a href="#type">Type</a></li>
     <li><a href="#sequence">Sequence</a></li>
+    <li><a href="#column-layout">Column layout</a></li>
   </ul>
 </li>
 <li><a href="#download">Download</a></li>
