--- a/docs/examples/partials/profile-block.html
+++ b/docs/examples/partials/profile-block.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-6 col-md-8 col-xs-12">
-		<h2 class="m-b-0">Patrick Mullen</h2>
+		<h2 class="m-b-0">Activity</h2>
 		<p class="m-b-0 small">Membership number P1234567</p>
 	</div>
 	<div class="col-sm-3 col-md-2 col-xs-6 p-t-1 hidden-xs">
