--- a/docs/examples/partials/side-nav.html
+++ b/docs/examples/partials/side-nav.html
@@ -1,20 +1,26 @@
-<!--<div class="p-a-3">
-	<a class="btn btn-success btn-block" href="topup.html">Create</a>
-</div>-->
-<div class="p-x-3 m-t-4 m-b-2">
-	<h4>My account</h4>
+
+
+<div class="column-layout-brand">
+	<a href="../"
+		class="logo navbar-logo logo-inverse"
+		title="TransferWise"></a>
 </div>
+
 <ul class="nav nav-stacked nav-inverse m-b-1">
-	<li class="active"><a href="">Activity</a></li>
+	<li class="active"><a href="account-left.html">Activity</a></li>
 	<li><a href="">Balances</a></li>
 	<li><a href="">History</a></li>
 	<li><a href="">Recipients</a></li>
-	<li><a href="">Invite Friends</a></li>
+	<li><a href="" id="inviteFriends" onclick="triggerInvitePopover()">Invite Friends</a></li>
+	<li><a href="" id="twoFactor" onclick="triggerTwoFactorPopover()">Secure your account</a></li>
 </ul>
 
-<div class="p-x-3 m-t-4">
+
+
+<!--
+<div class="p-x-panel m-t-4">
 	<a href="flow.html" class="pull-xs-right text-inverse">top up</a>
-	<h4 class="m-b-2">Balance</h4>
+	<h4 class="m-b-2">Balances</h4>
 </div>
 <ul class="nav nav-stacked nav-inverse m-b-2">
 	<li><a href="">GBP <span class="pull-xs-right">£1,234.56</span></a></li>
@@ -25,3 +31,4 @@
 <ul class="nav nav-stacked nav-inverse">
 	<li><a href="">Order a card</a></li>
 </ul>
+-->
