--- a/less/circle.less
+++ b/less/circle.less
@@ -63,6 +63,12 @@
             border: 1px solid @brand-info;
         }
     }
+
+    .navbar-nav > li > a & {
+      width: @navbar-line-height;
+      height: @navbar-line-height;
+      line-height: (@navbar-line-height - 2px);
+    }
 }
 
 .circle,
