--- a/less/logos.less
+++ b/less/logos.less
@@ -11,6 +11,7 @@
 .logo,
 .logo-primary,
 .navbar .navbar-brand  {
+	display: block;
 	background-image: @logo-full-primary;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
