--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -254,6 +254,25 @@
     <p>Like the standard <a href="../css/#buttons">button classes</a>, <code>.navbar-btn</code> can be used on <code>&lt;a&gt;</code> and <code>&lt;input&gt;</code> elements. However, neither <code>.navbar-btn</code> nor the standard button classes should be used on <code>&lt;a&gt;</code> elements within <code>.navbar-nav</code>.</p>
   </div>
 
+  <h2 id="navbar-title">Title</h2>
+  <p>Add a text title with the <code>.navbar-title</code> class, normally on a
+    heading class appropriate.</p>
+  <div class="bs-example" data-example-id="navbar-text">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <h1 class="navbar-title">Title</h1>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+{% highlight html %}
+<h1 class="navbar-title">Title</h1>
+{% endhighlight %}
+
+
   <h2 id="navbar-text">Text</h2>
   <p>Wrap strings of text in an element with <code>.navbar-text</code>, usually on a <code>&lt;p&gt;</code> tag for proper leading and color.</p>
   <div class="bs-example" data-example-id="navbar-text">
@@ -350,9 +369,9 @@
 
   <div class="alert alert-danger" id="callout-navbar-fixed-top-padding">
     <h4>Body padding required</h4>
-    <p>The fixed navbar will overlay your other content, unless you add <code>padding</code> to the top of the <code>&lt;body&gt;</code>. Try out your own values or use our snippet below. Tip: By default, the navbar is 60px high.</p>
+    <p>The fixed navbar will overlay your other content, unless you add <code>padding</code> to the top of the <code>&lt;body&gt;</code>. Try out your own values or use our snippet below. Tip: By default, the navbar is 56px high.</p>
 {% highlight scss %}
-body { padding-top: 60px; }
+body { padding-top: 56px; }
 {% endhighlight %}
     <p>Make sure to include this <strong>after</strong> the core Bootstrap CSS.</p>
   </div>
@@ -394,9 +413,9 @@ body { padding-top: 60px; }
 
   <div class="alert alert-danger" id="callout-navbar-fixed-bottom-padding">
     <h4>Body padding required</h4>
-    <p>The fixed navbar will overlay your other content, unless you add <code>padding</code> to the bottom of the <code>&lt;body&gt;</code>. Try out your own values or use our snippet below. Tip: By default, the navbar is 50px high.</p>
+    <p>The fixed navbar will overlay your other content, unless you add <code>padding</code> to the bottom of the <code>&lt;body&gt;</code>. Try out your own values or use our snippet below. Tip: By default, the navbar is 56px high.</p>
 {% highlight scss %}
-body { padding-bottom: 70px; }
+body { padding-bottom: 56px; }
 {% endhighlight %}
     <p>Make sure to include this <strong>after</strong> the core Bootstrap CSS.</p>
   </div>
