--- a/docs/examples/partials/next-card.html
+++ b/docs/examples/partials/next-card.html
@@ -1,6 +1,6 @@
-<div class="row row-equal-height m-t-panel m-b-3 hidden-xs">
-	<div class="col-xs-12 m-b-0" ng-class="{
-		'col-lg-4': $ctrl.show === 3,
+<div class="row row-equal-height hidden-xs">
+	<div class="col-xs-12 col-lg-6 m-b-0" ng-class="{
+		'col-xl-4': $ctrl.show === 3,
 		'col-lg-6': $ctrl.show === 2,
 		'col-lg-12': $ctrl.show === 1 || !$ctrl.show
 	}">
@@ -16,10 +16,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-xs-12 hidden-xs hidden-sm hidden-md m-b-0"
+	<div class=" col-xs-12 col-md-6 col-lg-6 hidden-xs hidden-sm hidden-md m-b-0"
 		ng-if="$ctrl.show > 1"
 		ng-class="{
-			'col-lg-4': $ctrl.show === 3,
+			'col-xl-4': $ctrl.show === 3,
 			'col-lg-6': $ctrl.show === 2
 		}">
 		<div class="tile tile-inverse m-b-0" tabindex="0" role="button">
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-4 col-xs-12 hidden-xs hidden-sm hidden-md m-b-0"
+	<div class="col-xs-12 col-md-6 col-xl-4 hidden-xs hidden-sm hidden-md hidden-lg m-b-0"
 		ng-if="$ctrl.show > 2">
 		<div class="tile tile-inverse m-b-0" tabindex="0" role="button">
 			<div class="media">
